tests/kiama/negative/name_errors/L4/4_recordname2.ob
MODULE recordname2;

TYPE
    arecord3 = RECORD x, x : INTEGER END;

END recordname2.
